gitignore et ia test copilot pour prometheus

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -10,6 +10,9 @@ yarn-error.log*
 /test/unit/coverage/
 /test/e2e/reports/
 selenium-debug.log
+coverage/
+node/
+target/
 
 # Editor directories and files
 .idea
